--- a/src/css/utilities/_helpers.scss
+++ b/src/css/utilities/_helpers.scss
@@ -60,11 +60,6 @@
 	}
 }
 
-.sticky {
-	position: sticky;
-	top: 0;
-}
-
 .serif {
 	font-family: var(--font-family-serif);
 }
